--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,10 @@
   "private": true,
   "dependencies": {
     "@electron/remote": "^2.0.8",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/material": "^5.10.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,29 +17,36 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.0",
     "concurrently": "^7.6.0",
     "craco": "^0.0.3",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "luxon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "typescript": "^4.9.3",
+    "universal-cookie": "^4.0.4",
     "wait-on": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/luxon": "^3.1.0",
     "electron": "^21.3.1",
     "electron-builder": "^23.6.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject",
-    "electron": "wait-on tcp:3000 && electron .",
-    "electron:start": "concurrently -k \"cross-env BROWSER=none npm run start\" \"npm run electron\"",
-    "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js"
+    "react:start": "craco start",
+    "react:build": "craco build",
+    "react:test": "craco test",
+    "react:eject": "craco eject",
+    "electron:start": "wait-on tcp:3000 && electron .",
+    "start": "concurrently -k \"cross-env BROWSER=none npm run react:start\" \"npm run electron:start\"",
+    "build": "npm run react:build && electron-builder -c.extraMetadata.main=build/main.js"
   },
   "eslintConfig": {
     "extends": [
