--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/luxon": "^3.1.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "helmet": "^6.0.0",
     "luxon": "^3.1.0",
     "mysql2": "^2.3.3",
