--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "craco": "^0.0.3",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "eslint": "^8.32.0",
     "luxon": "^3.1.0",
+    "prettier": "^2.8.3",
     "puppeteer": "^19.5.2",
     "puppeteer-core": "^19.5.2",
     "puppeteer-in-electron": "^3.0.5",
