--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@electron/remote": "^2.0.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.15",
-    "@mui/material": "^5.10.15",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,7 +24,9 @@
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "eslint": "^8.32.0",
+    "install": "^0.13.0",
     "luxon": "^3.1.0",
+    "npm": "^9.3.1",
     "prettier": "^2.8.3",
     "puppeteer": "^19.5.2",
     "puppeteer-core": "^19.5.2",
@@ -34,6 +37,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
     "universal-cookie": "^4.0.4",
     "wait-on": "^6.0.1",
