--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.0.0",
     "@electron/remote": "^2.0.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -24,18 +25,16 @@
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
     "eslint": "^8.32.0",
-    "install": "^0.13.0",
+    "google-spreadsheet": "^3.3.0",
+    "https-proxy-agent": "^5.0.1",
     "luxon": "^3.1.0",
-    "npm": "^9.3.1",
     "prettier": "^2.8.3",
-    "puppeteer": "^19.5.2",
-    "puppeteer-core": "^19.5.2",
-    "puppeteer-in-electron": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.8",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.3",
@@ -44,9 +43,25 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/google-spreadsheet": "^3.3.0",
     "@types/luxon": "^3.1.0",
+    "@types/react-window": "^1.8.5",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "electron": "^21.3.1",
-    "electron-builder": "^23.6.0"
+    "electron-builder": "^23.6.0",
+    "https-browserify": "^1.0.0",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tls": "^0.0.1",
+    "url": "^0.11.0",
+    "web3-utils": "^1.8.1"
   },
   "scripts": {
     "react:start": "craco start",
