--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 .DS_Store
 # testing
 /coverage
-/src/core/utils/google-sheet/credentials/*.json
+/src/sheet/credentials/*.json
 
 # production
 /build
