--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.3",
     "craco": "^0.0.3",
-    "google-spreadsheet": "^3.3.0",
+    "firebase": "^9.16.0",
     "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,6 +31,26 @@
     "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@types/firebase": "^3.2.1",
+    "@types/luxon": "^3.2.0",
+    "@types/react-window": "^1.8.5",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "serve": "^14.1.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tls": "^0.0.1",
+    "url": "^0.11.0",
+    "web3-utils": "^1.8.1"
   },
   "scripts": {
     "start": "craco start",
@@ -56,25 +76,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/google-spreadsheet": "^3.3.0",
-    "@types/luxon": "^3.2.0",
-    "@types/react-window": "^1.8.5",
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "net": "^1.0.2",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "serve": "^14.1.2",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "tls": "^0.0.1",
-    "url": "^0.11.0",
-    "web3-utils": "^1.8.1"
   },
   "homepage": "https://choewy.github.io/g2b"
 }
