--- a/package.json
+++ b/package.json
@@ -36,21 +36,7 @@
     "@types/firebase": "^3.2.1",
     "@types/luxon": "^3.2.0",
     "@types/react-window": "^1.8.5",
-    "assert": "^2.0.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "net": "^1.0.2",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
-    "process": "^0.11.10",
-    "serve": "^14.1.2",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "tls": "^0.0.1",
-    "url": "^0.11.0",
-    "web3-utils": "^1.8.1"
+    "serve": "^14.1.2"
   },
   "scripts": {
     "start": "craco start",
