--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "craco": "^0.0.3",
     "firebase": "^9.16.0",
     "luxon": "^3.2.1",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
