--- a/.github/workflows/g2b-client.yaml
+++ b/.github/workflows/g2b-client.yaml
@@ -27,7 +27,7 @@ jobs:
         run: npm install
 
       # Create frontend/.env file
-      - name: Create frontend/.env file
+      - name: Create .env file
         run: |
           touch .env
           echo TZ=Asia/Seoul >> .env
@@ -36,7 +36,7 @@ jobs:
           echo REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }} >> .env
           echo REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }} >> .env
           echo REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }} >> .env
-          echo REACT_APP_MEASUREMENT_ID=${{ secrets.REACT_APP_MEASUREMENT_ID }} >> .env
+          echo REACT_APP_FIREBASE_MEASUREMENT_ID=${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }} >> .env
           echo REACT_APP_FIREBASE_MESSAGE_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGE_SENDER_ID }} >> .env
           echo REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }} >> .env
           echo REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }} >> .env
