--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-json-to-csv": "^1.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/firebase": "^3.2.1",
     "@types/luxon": "^3.2.0",
+    "@types/react-json-to-csv": "^1.0.0",
     "@types/react-window": "^1.8.5",
     "serve": "^14.1.2"
   },
