--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.3",
     "craco": "^0.0.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.16.0",
     "luxon": "^3.2.1",
     "notistack": "^2.0.8",
@@ -26,13 +27,15 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-json-to-csv": "^1.2.0",
+    "react-json-to-excel": "^1.0.7",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.6",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
