--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "craco": "^0.0.3",
     "file-saver": "^2.0.5",
     "firebase": "^9.16.0",
+    "json-to-csv-export": "^2.1.1",
     "luxon": "^3.2.1",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-json-to-csv": "^1.2.0",
     "react-json-to-excel": "^1.0.7",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
