--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^4.9.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
