--- a/.github/workflows/g2b-client.yaml
+++ b/.github/workflows/g2b-client.yaml
@@ -33,6 +33,7 @@ jobs:
           echo TZ=Asia/Seoul >> .env
           echo REACT_APP_G2B_API_KEY=${{ secrets.REACT_APP_G2B_API_KEY }} >> .env
           echo REACT_APP_G2B_API_URL=${{ secrets.REACT_APP_G2B_API_URL }} >> .env
+          echo REACT_APP_G2B_API_VERSION=${{ secrets.REACT_APP_G2B_API_VERSION }} >> .env
           echo REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }} >> .env
           echo REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }} >> .env
           echo REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }} >> .env
