--- a/.github/workflows/env.yaml
+++ b/.github/workflows/env.yaml
@@ -8,16 +8,7 @@ jobs:
 
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
-      REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
-      REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-      REACT_APP_FIREBASE_MEASUREMENT_ID: ${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }}
-      REACT_APP_FIREBASE_MESSAGE_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGE_SENDER_ID }}
-      REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-      REACT_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-      REACT_APP_G2B_API_KEY: ${{ secrets.REACT_APP_G2B_API_KEY }}
-      REACT_APP_G2B_API_URL: ${{ secrets.REACT_APP_G2B_API_URL }}
-      REACT_APP_G2B_API_VERSION: ${{ secrets.REACT_APP_G2B_API_VERSION }}
+      ENVS: ${{ secrets.ENVS }}
 
     steps:
       - name: Checkout
@@ -25,19 +16,4 @@ jobs:
 
       - name: Send to slack
         run: |
-          touch .env
-          echo TZ=Asia/Seoul >> .env
-          echo REACT_APP_G2B_API_KEY=${{ secrets.REACT_APP_G2B_API_KEY }} >> .env
-          echo REACT_APP_G2B_API_URL=${{ secrets.REACT_APP_G2B_API_URL }} >> .env
-          echo REACT_APP_G2B_API_VERSION=${{ secrets.REACT_APP_G2B_API_VERSION }} >> .env
-          echo REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }} >> .env
-          echo REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }} >> .env
-          echo REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }} >> .env
-          echo REACT_APP_FIREBASE_MEASUREMENT_ID=${{ secrets.REACT_APP_FIREBASE_MEASUREMENT_ID }} >> .env
-          echo REACT_APP_FIREBASE_MESSAGE_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGE_SENDER_ID }} >> .env
-          echo REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }} >> .env
-          echo REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }} >> .env
-
-          ENVS=`cat .env`
-
           sh scripts/send-env-to-slack.sh "g2b" "$SLACK_WEBHOOK_URL" "$ENVS"
