--- a/.github/workflows/g2b-client.yaml
+++ b/.github/workflows/g2b-client.yaml
@@ -7,22 +7,22 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
-
     env:
       ENVS: ${{ secrets.ENVS }}
 
+    runs-on: ubuntu-20.04
+
     strategy:
       matrix:
-        node-version: ['16.x']
+        node: [20]
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Install Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.node }}
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
@@ -30,7 +30,7 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          echo $ENVS >> .env
+          echo "$ENVS" >> .env
 
       - name: Build
         run: npm run build
