--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 TZ = Asia/Seoul
-VERSION = v0.0.0
 
+REACT_APP_ENV = local
+REACT_APP_VERSION = v0.0.0
 REACT_APP_SERVER_URL = http://localhost:4000
