--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "g2b-client",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
+  },
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,17 +24,18 @@
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "socket.io-client": "^4.7.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@types/luxon": "^3.4.2",
+    "@types/uuid": "^9.0.8"
   },
   "eslintConfig": {
     "extends": [
@@ -47,9 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/luxon": "^3.4.2",
-    "@types/uuid": "^9.0.8"
   }
 }
