--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,6 +34,7 @@ jobs:
         env:
           env: ${{ secrets.ENVIRONMENT }}
         run: |
+          rm .env*
           echo "$ENV" >> .env
           echo "REACT_APP_VERSION=$tag" >> .env
 
