refactor/github actions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,7 @@ jobs:
           env: ${{ secrets.ENVIRONMENT }}
         run: |
           rm .env*
-          echo "$ENV" >> .env
+          echo "$env" >> .env
           echo "REACT_APP_VERSION=$tag" >> .env
 
       - name: Build Application
