--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: deploy
 on:
   push:
     tags: ['v*']
-    branches: ['develop']
+    paths-ignore: ['README.md']
 
 env:
   tag: ${{ github.ref_name }}
