feature/gh-pages

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: deploy
+name: deploy with cloudfront
 
 on:
   push:
@@ -27,8 +27,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Install dependencies
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Create .env
         env:
